--- a/rewrite_script.conf
+++ b/rewrite_script.conf
@@ -3,7 +3,7 @@ hostname = trade-acs.m.taobao.com, *.*apps.com, *.gao1gps.cn, m.samh.xndm.tech, 
 
 # Chavy box (多账号Cookie保存切换)
 # 访问:  http://boxjs.com 管理
-^https?://boxjs.net url script-analyze-echo-response https://gitee.com/chavyleung/scripts/raw/master/box/chavy.boxjs.js
+^https?://boxjs.com url script-analyze-echo-response https://gitee.com/chavyleung/scripts/raw/master/chavy.box.js
 
 # 去微博应用内广告 (By yichahucha)
 ^https?://(sdk|wb)app.uve.weibo.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js
