修改引用script的远程地址

--- a/quantumultx.conf
+++ b/quantumultx.conf
@@ -40,9 +40,9 @@ server=/*.netease.com/119.29.29.29
 server=/*.mi.com/119.29.29.29
 server=/*.xiaomi.com/119.29.29.29
 
-[policy]
-#策略
 
+#策略
+[policy]
 ;static=🐟 漏网之鱼, direct, proxy, 健康检测, 🐳 SSID策略, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Final.png
 
 ;ssid=🐳 SSID策略, proxy, proxy, 一般路由器(自己修改WiFi名称): proxy, 翻墙路由器(自己修改WiFi名称): direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/SSID.png
@@ -87,12 +87,13 @@ static=🚫屏蔽系统更新, reject, direct, img-url=https://raw.githubusercon
 
 static=🌏 外网, proxy, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Global.png
 
-[server_remote]
+
 #节点订阅
+[server_remote]
 
 
-[filter_remote]
 #分流订阅
+[filter_remote]
 https://raw.githubusercontent.com/eHpo1/Rules/master/QuantumultX/Filter/Liby.txt, tag=🚫 广告拦截, force-policy=reject, enabled=true
 
 https://raw.githubusercontent.com/eHpo1/Rules/master/QuantumultX/Filter/Sub/Telegram.txt, tag=📱Telegram, force-policy=Telegram, enabled=true
@@ -103,9 +104,9 @@ https://raw.githubusercontent.com/eHpo1/Rules/master/QuantumultX/Filter/Sub/YouT
 
 https://raw.githubusercontent.com/eHpo1/Rules/master/QuantumultX/Filter/Sub/Netflix.txt, tag=📺 Netflix, force-policy=📺 Netflix, enabled=true
 
-https://raw.githubusercontent.com/eHpo1/Rules/master/QuantumultX/Filter/GlobalMedia.txt, tag=💻 国外影视, force-policy=💻 国外影视, enabled=true
+https://raw.githubusercontent.com/eHpo1/Rules/master/QuantumultX/Filter/GlobalMedia.txt, tag=💻 国外影视, force-policy=🌏 外网, update-interval=86400, opt-parser=false, enabled=true
 
-https://raw.githubusercontent.com/eHpo1/Rules/master/QuantumultX/Filter/Global.txt, tag=🌏 国外网站, force-policy=proxy, enabled=true
+https://raw.githubusercontent.com/eHpo1/Rules/master/QuantumultX/Filter/Global.txt, tag=🌏 国外网站, force-policy=🌏 外网, update-interval=86400, opt-parser=false, enabled=true
 
 https://raw.githubusercontent.com/eHpo1/Rules/master/QuantumultX/Filter/Apple_CDN.txt, tag=苹果CDN 资源类(建议直连), force-policy=direct, enabled=true
 
@@ -120,29 +121,30 @@ https://raw.githubusercontent.com/eHpo1/Rules/master/QuantumultX/Filter/Domestic
 https://raw.githubusercontent.com/limbopro/Profiles/master/Quantumult/X/Filter/BacktoCN.list, tag=CN（回国，默认禁用）, force-policy=🇨🇳 China, enabled=false
 
 
-[rewrite_remote]
 #远程重写
+[rewrite_remote]
 https://raw.githubusercontent.com/eHpo1/Rules/master/QuantumultX/Rewrite.txt, tag=eHpo1去广告, update-interval=86400, opt-parser=false, enabled=true
 
-https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Get_Cookie_New.conf, tag=nzw9314获取Cookie(右滑禁用), update-interval=86400, opt-parser=false, enabled=false
-
-https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Js_local_WorkingCopy.conf, tag=nzw9314脚本, enabled=false
+https://raw.githubusercontent.com/taoing/quantumultX/master/Get_Cookie_New.conf, tag=nzw9314获取Cookie(右滑禁用), update-interval=86400, opt-parser=false, enabled=false
 
 https://raw.githubusercontent.com/taoing/quantumultX/master/rewrite_script.conf, tag=nzw9314脚本(自用修改), enabled=true
 
 https://raw.githubusercontent.com/Tartarus2014/For-own-use/master/Quantumult%20X/Script.conf, tag=Tartarus2014脚本自用, update-interval=86400, opt-parser=false, enabled=false
 
+https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Js_local_WorkingCopy.conf, tag=nzw9314脚本, update-interval=86400, opt-parser=false, enabled=false
+
 https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Q-Search_All_in_one.conf, tag=Q-Search, update-interval=86400, opt-parser=false, enabled=false
 
 
-[server_local]
 #本地节点
+[server_local]
 http=192.168.2.240:4002, fast-open=false, udp-relay=false, tag=🎧 解锁网易云音乐
 
 http=192.168.6.182:4002, fast-open=false, udp-relay=false, tag=🎧 解锁网易云音乐C
 
-[task_local]
 
+# 本地定时脚本
+[task_local]
 # 按需求自己选择和修改时间
 # 定时脚本
 # * * * * * sample-task.js
@@ -222,13 +224,11 @@ http=192.168.6.182:4002, fast-open=false, udp-relay=false, tag=🎧 解锁网易
 1 1 * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_redPacket.js, tag=京东全民开红包, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_redPacket.png, enabled=true
 
 #京豆变动通知
-2 9 * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_bean_change.js, tag=京豆变动通知, enabled=true
+2 9 * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_bean_change.js, tag=京豆变动通知, enabled=false
 
 #京东手机狂欢城
-1 0-18/6 * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_818.js, tag=京东手机狂欢城, enabled=true
 
 #京东星推官
-2 0 * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_xtg.js, tag=京东星推官, enabled=true
 
 # 京东加速 (By lxk0301)
 # 京东App - 右下角"我的"- 游戏与互动-天天加速
@@ -245,7 +245,7 @@ http=192.168.6.182:4002, fast-open=false, udp-relay=false, tag=🎧 解锁网易
 
 # > 机场签到 (by evilbutcher & Neurogram )
 # 使用BoxJs配置订阅及密码
-2 0 * * * https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/glados/checkin_env.js, tag=机场签到, img-url=https://raw.githubusercontent.com/Orz-3/task/master/airport.png, enabled=false
+2 0 * * * https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/glados/checkin_env.js, tag=机场签到, img-url=https://raw.githubusercontent.com/Orz-3/task/master/airport.png, enabled=true
 
 # 招行信用卡(公众号) (By @iNotification)
 #招商银行信用卡微信公众号："领积分 - 签到领积分"
@@ -273,17 +273,16 @@ http=192.168.6.182:4002, fast-open=false, udp-relay=false, tag=🎧 解锁网易
 1 0 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/v2ex/quanx/v2ex.js, tag=V2EX, img-url=https://raw.githubusercontent.com/Orz-3/task/master/v2ex.png,enabled=true
 
 
+#本地rewrite脚本
 [rewrite_local]
-#本地脚本
-
 # TikTok By wzw1997007 & Choler
 (?<=_region=)CN(?=&) url 307 JP
 (?<=&app_version=)1(6|7)..(?=.?.?&) url 307 1
 (?<=\?version_code=)1(6|7)..(?=.?.?&) url 307 1
 
 
-[filter_local]
 #本地分流
+[filter_local]
 ;user-agent, ?abc*, proxy
 ;host, www.google.com, proxy
 ;host-keyword, adsite, reject
@@ -314,6 +313,7 @@ ip-cidr, 192.168.0.0/16, direct
 ip-cidr, 224.0.0.0/24, direct
 geoip, cn, direct
 final, proxy
+
 
 [mitm]
 passphrase = 42950F11
