--- a/quantumultx.conf
+++ b/quantumultx.conf
@@ -229,6 +229,12 @@ http=192.168.6.182:4002, fast-open=false, udp-relay=false, tag=🎧 解锁网易
 #京东点点券
 10 0,20 * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_necklace.js, tag=京东点点券, enabled=true
 
+#东东工厂
+10 * * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_jdfactory.js, tag=东东工厂, enabled=true
+
+#京喜工厂
+10 * * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_dreamFactory.js, tag=京喜工厂, enabled=true
+
 # 东东小窝(lxk0301)
 16 0 * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_small_home.js, tag=东东小窝(lxk0301), img-url=https://raw.githubusercontent.com/58xinian/icon/master/ddxw.png  enabled=true
 
