--- a/rewrite_script.conf
+++ b/rewrite_script.conf
@@ -1,4 +1,4 @@
-hostname = trade-acs.m.taobao.com, *.*apps.com, *.gao1gps.cn, m.samh.xndm.tech, api.m.jd.com, vipapi.jxedt.com, app.xunjiepdf.com, vira.llsapp.com, pan.baidu.com, api.rr.tv,  ctrl.playcvn.com, m.client.10010.com, api.jiaonizuocai.com, bkcd.b-cdn.net, souhu.mett.me, ayk.tmdidi.com, *.arten.cn, *.bjxkhc.com, api.591master.com, jdytv.cn, user.shywck.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, mp.weixin.qq.com, api.bilibili.com, app.bilibili.com, api.zhihu.com, link.zhihu.com, aweme*.snssdk.com, *.kuwo.cn, vip1.kuwo.cn, *.xiao*.com, *.xiaoxiao*.com, *.musical.ly, *.amemv.com, p.du.163.com, getuserinfo.321mh.com, getuserinfo-globalapi.zymk.cn, ios.fuliapps.com, *.my10api.com, sp.kaola.com, apple.fuliapps.com, newdrugs.dxy.cn, app101.avictown.cc, api.hlo.xyz, api.ijo.xyz, www.luqijianggushi.com, account.wps.*, u.kanghuayun.com, api.mvmtv.com, mitaoapp.yeduapp.com, www.3ivf.com, pay.guoing.com, api.bjxkhc.com, viva.v21xy.com, api.gotokeep.com, ap*.intsig.net, api.vuevideo.net, api.gamer.com.tw, ios.xiangjiaoapps.com, apple.xiangjiaoapps.com, *.lagoapps.com, *.xiangxiangapps.com, avatar-nct.nixcdn.com, spclient.wg.spotify.com, oa.zalo.me, viva-asia1.vvbrd.com, purchases.ws.pho.to, bmall.camera360.com, license.enpass.io, api.keepkeep.com, api.textnow.me, jdjoy.jd.com,draw.jdfcloud.com
+hostname = trade-acs.m.taobao.com, *.*apps.com, *.gao1gps.cn, m.samh.xndm.tech, api.m.jd.com, vipapi.jxedt.com, app.xunjiepdf.com, vira.llsapp.com, pan.baidu.com, api.rr.tv,  ctrl.playcvn.com, m.client.10010.com, api.jiaonizuocai.com, bkcd.b-cdn.net, souhu.mett.me, ayk.tmdidi.com, *.arten.cn, *.bjxkhc.com, api.591master.com, jdytv.cn, user.shywck.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, mp.weixin.qq.com, api.bilibili.com, app.bilibili.com, api.zhihu.com, link.zhihu.com, aweme*.snssdk.com, *.kuwo.cn, vip1.kuwo.cn, *.xiao*.com, *.xiaoxiao*.com, *.musical.ly, *.amemv.com, p.du.163.com, getuserinfo.321mh.com, getuserinfo-globalapi.zymk.cn, ios.fuliapps.com, *.my10api.com, sp.kaola.com, apple.fuliapps.com, newdrugs.dxy.cn, app101.avictown.cc, api.hlo.xyz, api.ijo.xyz, www.luqijianggushi.com, account.wps.*, u.kanghuayun.com, api.mvmtv.com, mitaoapp.yeduapp.com, www.3ivf.com, pay.guoing.com, api.bjxkhc.com, viva.v21xy.com, api.gotokeep.com, ap*.intsig.net, api.vuevideo.net, api.gamer.com.tw, ios.xiangjiaoapps.com, apple.xiangjiaoapps.com, *.lagoapps.com, *.xiangxiangapps.com, avatar-nct.nixcdn.com, spclient.wg.spotify.com, oa.zalo.me, viva-asia1.vvbrd.com, purchases.ws.pho.to, bmall.camera360.com, license.enpass.io, api.keepkeep.com, api.textnow.me, jdjoy.jd.com, draw.jdfcloud.com, wq.jd.com
 
 
 # Chavy box (多账号Cookie保存切换)
@@ -202,3 +202,10 @@ https:\/\/api\.gamer\.com\.tw\/mobile_app\/anime\/v3\/token\.php url script-resp
 
 #京东宠汪汪聚宝盆
 ^https:\/\/jdjoy\.jd\.com\/pet\/getPetTreasureBox|^https:\/\/draw\.jdfcloud\.com\/\/pet\/getPetTreasureBox url script-response-body https://gitee.com/lxk0301/jd_scripts/raw/master/jd_petTreasureBox.js
+
+#京东粉丝专享
+#签到5天可兑换40京豆
+#活动入口：京东JD.COM 公众号-粉丝福利-签到兑红包
+#已支持IOS双京东账号,Node.js支持N个京东账号
+#需要获取额外ck，获取方式为从活动入口进入一次，不会影响原有京东ck
+https:\/\/wq\.jd\.com\/bases\/jssdk\/GetWxJsApiSign url script-request-header https://raw.githubusercontent.com/shylocks/Loon/main/jd_wechat_sign.js
