--- a/rewrite_script.conf
+++ b/rewrite_script.conf
@@ -207,5 +207,34 @@ https:\/\/api\.gamer\.com\.tw\/mobile_app\/anime\/v3\/token\.php url script-resp
 #签到5天可兑换40京豆
 #活动入口：京东JD.COM 公众号-粉丝福利-签到兑红包
 #已支持IOS双京东账号,Node.js支持N个京东账号
-#需要获取额外ck，获取方式为从活动入口进入一次，不会影响原有京东ck
+#需要获取额外ck，获取方式为从活动入口进入一次，不会影响原有京东ck(原有京东ck使用lxk的JD_extra_cookie.js获取)
 https:\/\/wq\.jd\.com\/bases\/jssdk\/GetWxJsApiSign url script-request-header https://raw.githubusercontent.com/shylocks/Loon/main/jd_wechat_sign.js
+
+#获取多个京东cookie的脚本, 不和NobyDa的京东cookie冲突
+#使用方式: 在代理软件配置好下方配置后, 复制 https://home.m.jd.com/myJd/newhome.action 到浏览器打开, 在个人中心自动获取 cookie,
+#若弹出成功则正常使用, 否则继续再此页面继续刷新一下试试
+https:\/\/wq\.jd\.com\/user_new\/info\/GetJDUserInfoUnion  url script-request-header https://gitee.com/lxk0301/jd_scripts/raw/master/JD_extra_cookie.js
+
+
+#宠汪汪邀请助力与赛跑助力脚本，感谢github@Zero-S1提供帮助
+#token时效很短，几个小时就失效了,闲麻烦的放弃就行
+#每天拿到token后，可一次性运行完毕即可。
+#互助码friendPin是京东用户名，不是昵称（可在京东APP->我的->设置 查看获得）
+#token获取途径：
+#1、微信搜索'来客有礼'小程序,登陆京东账号，点击底部的'我的'或者'发现'两处地方,即可获取Token，脚本运行提示token失效后，继续按此方法获取即可
+#2、或者每天去'来客有礼'小程序->宠汪汪里面，领狗粮->签到领京豆 也可获取Token(此方法每天只能获取一次)
+# 宠汪汪助力更新Token
+^https:\/\/draw\.jdfcloud\.com(\/mirror)?\/\/api\/user\/addUser\?code= url script-response-body https://gitee.com/lxk0301/jd_scripts/raw/master/jd_joy_run.js
+# 宠汪汪助力获取Token
+^https:\/\/draw\.jdfcloud\.com(\/mirror)?\/\/api\/user\/user\/detail\?openId= url script-request-header https://gitee.com/lxk0301/jd_scripts/raw/master/jd_joy_run.js
+
+
+#宠汪汪强制为别人助力（助力一个好友你自己可以获得30积分，一天上限是帮助3个好友，自己获得90积分，不管助力是否成功，对方都会成为你的好友）
+#脚本随机从里面获取一个，助力成功后，退出小程序重新点击进去开始助力新的好友
+#https://jdjoy.jd.com/pet/getFriends?itemsPerPage=20&currentPage=1 (currentPage=1表示第一页好友，=2表示第二页好友)
+#如果想设置固定好友，那下载下来放到本地使用，可以修改friendPin换好友(助力一好友后，更换一次friendPin里面的内容)
+#使用方法：
+#①设置好相应软件的重写
+#②从京东APP宠汪汪->领狗粮->邀请好友助力，分享给你小号微信或者微信的文件传输助手。 自己再打开刚才的分享，助力成功后，返回到此小程序首页重新进去宠汪汪即可助力下一位好友
+#③如提示好友人气旺，说明此好友已满了三人助力，需重新进出小程序，重新进入来客有礼-宠汪汪
+^https:\/\/draw\.jdfcloud\.com(\/mirror)?\/\/pet\/enterRoom\/h5\?reqSource=weapp&invitePin=.*+(&inviteSource=task_invite&shareSource=\w+&inviteTimeStamp=\d+&openId=\w+)?|^https:\/\/draw\.jdfcloud\.com(\/mirror)?\/\/pet\/helpFriend\?friendPin url script-request-header https://gitee.com/lxk0301/jd_scripts/raw/master/jd_joy_help.js
