--- a/rewrite_script.conf
+++ b/rewrite_script.conf
@@ -1,4 +1,4 @@
-hostname = trade-acs.m.taobao.com, *.*apps.com, *.gao1gps.cn, m.samh.xndm.tech, api.m.jd.com, vipapi.jxedt.com, app.xunjiepdf.com, vira.llsapp.com, pan.baidu.com, api.rr.tv,  ctrl.playcvn.com, m.client.10010.com, api.jiaonizuocai.com, bkcd.b-cdn.net, souhu.mett.me, ayk.tmdidi.com, *.arten.cn, *.bjxkhc.com, api.591master.com, jdytv.cn, user.shywck.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, mp.weixin.qq.com, api.bilibili.com, app.bilibili.com, api.zhihu.com, link.zhihu.com, aweme*.snssdk.com, *.kuwo.cn, vip1.kuwo.cn, *.xiao*.com, *.xiaoxiao*.com, *.musical.ly, *.amemv.com, p.du.163.com, getuserinfo.321mh.com, getuserinfo-globalapi.zymk.cn, ios.fuliapps.com, *.my10api.com, sp.kaola.com, apple.fuliapps.com, newdrugs.dxy.cn, app101.avictown.cc, api.hlo.xyz, api.ijo.xyz, www.luqijianggushi.com, account.wps.*, u.kanghuayun.com, api.mvmtv.com, mitaoapp.yeduapp.com, www.3ivf.com, pay.guoing.com, api.bjxkhc.com, viva.v21xy.com, api.gotokeep.com, ap*.intsig.net, api.vuevideo.net, api.gamer.com.tw, ios.xiangjiaoapps.com, apple.xiangjiaoapps.com, *.lagoapps.com, *.xiangxiangapps.com, avatar-nct.nixcdn.com, spclient.wg.spotify.com, oa.zalo.me, viva-asia1.vvbrd.com, purchases.ws.pho.to, bmall.camera360.com, license.enpass.io, api.keepkeep.com, api.textnow.me, jdjoy.jd.com, draw.jdfcloud.com, wq.jd.com
+hostname = trade-acs.m.taobao.com, *.*apps.com, *.gao1gps.cn, m.samh.xndm.tech, vipapi.jxedt.com, app.xunjiepdf.com, vira.llsapp.com, pan.baidu.com, api.rr.tv,  ctrl.playcvn.com, m.client.10010.com, api.jiaonizuocai.com, bkcd.b-cdn.net, souhu.mett.me, ayk.tmdidi.com, *.arten.cn, *.bjxkhc.com, api.591master.com, jdytv.cn, user.shywck.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, mp.weixin.qq.com, api.bilibili.com, app.bilibili.com, api.zhihu.com, link.zhihu.com, aweme*.snssdk.com, *.kuwo.cn, vip1.kuwo.cn, *.xiao*.com, *.xiaoxiao*.com, *.musical.ly, *.amemv.com, p.du.163.com, getuserinfo.321mh.com, getuserinfo-globalapi.zymk.cn, ios.fuliapps.com, *.my10api.com, sp.kaola.com, apple.fuliapps.com, newdrugs.dxy.cn, app101.avictown.cc, api.hlo.xyz, api.ijo.xyz, www.luqijianggushi.com, account.wps.*, u.kanghuayun.com, api.mvmtv.com, mitaoapp.yeduapp.com, www.3ivf.com, pay.guoing.com, api.bjxkhc.com, viva.v21xy.com, api.gotokeep.com, ap*.intsig.net, api.vuevideo.net, api.gamer.com.tw, ios.xiangjiaoapps.com, apple.xiangjiaoapps.com, *.lagoapps.com, *.xiangxiangapps.com, avatar-nct.nixcdn.com, spclient.wg.spotify.com, oa.zalo.me, viva-asia1.vvbrd.com, purchases.ws.pho.to, bmall.camera360.com, license.enpass.io, api.keepkeep.com, api.textnow.me, api.m.jd.com, draw.jdfcloud.com, jdjoy.jd.com, account.huami.com, wq.jd.com
 
 
 # Chavy box (多账号Cookie保存切换)
@@ -200,23 +200,20 @@ https:\/\/api\.gamer\.com\.tw\/mobile_app\/anime\/v3\/token\.php url script-resp
 ^http://.+/amdc/mobileDispatch url script-request-body https://raw.githubusercontent.com/yichahucha/surge/master/tb_price_lite.js
 ^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js
 
-#京东宠汪汪聚宝盆
-^https:\/\/jdjoy\.jd\.com\/pet\/getPetTreasureBox|^https:\/\/draw\.jdfcloud\.com\/\/pet\/getPetTreasureBox url script-response-body https://gitee.com/lxk0301/jd_scripts/raw/master/jd_petTreasureBox.js
-
 #京东粉丝专享
 #签到5天可兑换40京豆
 #活动入口：京东JD.COM 公众号-粉丝福利-签到兑红包
 #已支持IOS双京东账号,Node.js支持N个京东账号
-#需要获取额外ck，获取方式为从活动入口进入一次，不会影响原有京东ck(原有京东ck使用lxk的JD_extra_cookie.js获取)
+#需要获取额外ck，获取方式为从活动入口进入一次，不会影响原有京东ck
 https:\/\/wq\.jd\.com\/bases\/jssdk\/GetWxJsApiSign url script-request-header https://raw.githubusercontent.com/shylocks/Loon/main/jd_wechat_sign.js
 
 #获取多个京东cookie的脚本, 不和NobyDa的京东cookie冲突
 #使用方式: 在代理软件配置好下方配置后, 复制 https://home.m.jd.com/myJd/newhome.action 到浏览器打开, 在个人中心自动获取 cookie,
 #若弹出成功则正常使用, 否则继续再此页面继续刷新一下试试
-https:\/\/wq\.jd\.com\/user_new\/info\/GetJDUserInfoUnion  url script-request-header https://gitee.com/lxk0301/jd_scripts/raw/master/JD_extra_cookie.js
+https:\/\/wq\.jd\.com\/user_new\/info\/GetJDUserInfoUnion  url script-request-header https://jdsharedresourcescdn.azureedge.net/jdresource/JD_extra_cookie.js
 
 
-#宠汪汪邀请助力与赛跑助力脚本，感谢github@Zero-S1提供帮助
+#宠汪汪邀请助力与赛跑助力脚本
 #token时效很短，几个小时就失效了,闲麻烦的放弃就行
 #每天拿到token后，可一次性运行完毕即可。
 #互助码friendPin是京东用户名，不是昵称（可在京东APP->我的->设置 查看获得）
@@ -224,9 +221,9 @@ https:\/\/wq\.jd\.com\/user_new\/info\/GetJDUserInfoUnion  url script-request-he
 #1、微信搜索'来客有礼'小程序,登陆京东账号，点击底部的'我的'或者'发现'两处地方,即可获取Token，脚本运行提示token失效后，继续按此方法获取即可
 #2、或者每天去'来客有礼'小程序->宠汪汪里面，领狗粮->签到领京豆 也可获取Token(此方法每天只能获取一次)
 # 宠汪汪助力更新Token
-^https:\/\/draw\.jdfcloud\.com(\/mirror)?\/\/api\/user\/addUser\?code= url script-response-body https://gitee.com/lxk0301/jd_scripts/raw/master/jd_joy_run.js
+^https:\/\/draw\.jdfcloud\.com(\/mirror)?\/\/api\/user\/addUser\?code= url script-response-body https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_run.js
 # 宠汪汪助力获取Token
-^https:\/\/draw\.jdfcloud\.com(\/mirror)?\/\/api\/user\/user\/detail\?openId= url script-request-header https://gitee.com/lxk0301/jd_scripts/raw/master/jd_joy_run.js
+^https:\/\/draw\.jdfcloud\.com(\/mirror)?\/\/api\/user\/user\/detail\?openId= url script-request-header https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_run.js
 
 
 #宠汪汪强制为别人助力（助力一个好友你自己可以获得30积分，一天上限是帮助3个好友，自己获得90积分，不管助力是否成功，对方都会成为你的好友）
@@ -237,4 +234,10 @@ https:\/\/wq\.jd\.com\/user_new\/info\/GetJDUserInfoUnion  url script-request-he
 #①设置好相应软件的重写
 #②从京东APP宠汪汪->领狗粮->邀请好友助力，分享给你小号微信或者微信的文件传输助手。 自己再打开刚才的分享，助力成功后，返回到此小程序首页重新进去宠汪汪即可助力下一位好友
 #③如提示好友人气旺，说明此好友已满了三人助力，需重新进出小程序，重新进入来客有礼-宠汪汪
-^https:\/\/draw\.jdfcloud\.com(\/mirror)?\/\/pet\/enterRoom\/h5\?reqSource=weapp&invitePin=.*+(&inviteSource=task_invite&shareSource=\w+&inviteTimeStamp=\d+&openId=\w+)?|^https:\/\/draw\.jdfcloud\.com(\/mirror)?\/\/pet\/helpFriend\?friendPin url script-request-header https://gitee.com/lxk0301/jd_scripts/raw/master/jd_joy_help.js
+^https:\/\/draw\.jdfcloud\.com(\/mirror)?\/\/pet\/enterRoom\/h5\?reqSource=weapp&invitePin=.*+(&inviteSource=task_invite&shareSource=\w+&inviteTimeStamp=\d+&openId=\w+)?|^https:\/\/draw\.jdfcloud\.com(\/mirror)?\/\/pet\/helpFriend\?friendPin url script-request-header https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_help.js
+
+#小米运动获取token
+^https:\/\/account\.huami\.com\/v2\/client\/login url script-response-body https://jdsharedresourcescdn.azureedge.net/jdresource/xmSports.js
+
+#picsew专业版
+https:\/\/buy\.itunes\.apple\.com\/verifyReceipt - script-response-body https://raw.githubusercontent.com/mandxy/ziyong/main/picsew.js
