--- a/js.conf
+++ b/js.conf
@@ -1,8 +1,8 @@
-hostname = trade-acs.m.taobao.com, api.m.jd.com, draw.jdfcloud.com, account.huami.com, wq.jd.com, buy.itunes.apple.com
+hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, trade-acs.m.taobao.com, api.m.jd.com, draw.jdfcloud.com, account.huami.com, wq.jd.com, buy.itunes.apple.com
 
-# Chavy boxjs
-# 访问:  http://boxjs.com 管理
-^https?://boxjs.com url script-analyze-echo-response https://gitee.com/chavyleung/scripts/raw/master/chavy.box.js
+# 微博去广告 (api.weibo.cn, mapi.weibo.com, *.uve.weibo.com)
+https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js
+https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)(mix)?timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|!/(photos/pic_recommend_status|live/media_homelist)|video/tiny_stream_video_list|photo/info) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_ad.js
 
 #京东历史比价 (api.m.jd.com)
 ^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js
