--- a/rewrite/jd_rewrite.conf
+++ b/rewrite/jd_rewrite.conf
@@ -1,6 +1,6 @@
 #京东请求重写
 
-hostname = api.m.jd.com, m.jingxi.com
+hostname = api.m.jd.com, m.jingxi.com, pengyougou.m.jd.com
 
 #东东超市兑换列表
 https://api\.m\.jd\.com/api\?appid=jdsupermarket&functionId=smt_queryPrizeAreas.+ url script-response-body https://raw.githubusercontent.com/taoing/quantumultX/master/rewrite/jd_superMarket_prizeAreas.js
@@ -10,3 +10,6 @@ https://m\.jingxi\.com/jxcfd/consume/UserCashOutState.+ url script-response-body
 
 #京喜财富岛打印提现请求
 https://m\.jingxi\.com/jxcfd/consume/CashOut.+ url script-response-body https://raw.githubusercontent.com/taoing/quantumultX/master/rewrite/jd_cfd_cashout.js
+
+#京东京享值好友pk列表重写
+^https://pengyougou.m.jd.com/like/jxz/getUserFriendsPage.+ url script-response-body https://raw.githubusercontent.com/taoing/quantumultX/master/rewrite/jd_jxz_friends.js
