--- a/rewrite/jd_rewrite.conf
+++ b/rewrite/jd_rewrite.conf
@@ -12,4 +12,4 @@ https://m\.jingxi\.com/jxcfd/consume/UserCashOutState.+ url script-response-body
 https://m\.jingxi\.com/jxcfd/consume/CashOut.+ url script-response-body https://raw.githubusercontent.com/taoing/quantumultX/master/rewrite/jd_cfd_cashout.js
 
 #京东京享值好友pk列表重写
-^https://pengyougou.m.jd.com/like/jxz/getUserFriendsPage.+ url script-response-body https://raw.githubusercontent.com/taoing/quantumultX/master/rewrite/jd_jxz_friends.js
+^https://pengyougou.m.jd.com/like/jxz/getUserFriendsPage\?actId=8.+ url script-response-body https://raw.githubusercontent.com/taoing/quantumultX/master/rewrite/jd_jxz_friends.js
