--- a/js.conf
+++ b/js.conf
@@ -1,4 +1,4 @@
-hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, trade-acs.m.taobao.com, api.m.jd.com, draw.jdfcloud.com, account.huami.com, wq.jd.com, buy.itunes.apple.com
+hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, trade-acs.m.taobao.com, api.m.jd.com, draw.jdfcloud.com, account.huami.com, wq.jd.com, buy.itunes.apple.com, mb3admin.com
 
 # 微博去广告 (api.weibo.cn, mapi.weibo.com, *.uve.weibo.com)
 https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js
@@ -8,7 +8,6 @@ https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends
 ^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js
 
 #淘宝历史比价 (trade-acs.m.taobao.com)
-^http://.+/amdc/mobileDispatch url script-request-body https://raw.githubusercontent.com/yichahucha/surge/master/tb_price_lite.js
 ^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js
 
 #京东粉丝专享(wq.jd.com)
@@ -52,3 +51,6 @@ https:\/\/wq\.jd\.com\/user_new\/info\/GetJDUserInfoUnion  url script-request-he
 
 #picsew专业版(buy.itunes.apple.com)
 https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/mandxy/ziyong/main/picsew.js
+
+#emby crack(mb3admin.com)
+^https:\/\/mb3admin\.com\/admin\/service(\/registration\/validateDevice|\/appstore\/register|\/registration\/validate|\/registration\/getStatus|\/supporter\/retrievekey) url script-echo-response https://subweb.oss-cn-hongkong.aliyuncs.com/Script/embycrack.js
