--- a/js.conf
+++ b/js.conf
@@ -1,4 +1,4 @@
-hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, trade-acs.m.taobao.com, api.m.jd.com, draw.jdfcloud.com, account.huami.com, wq.jd.com, buy.itunes.apple.com, mb3admin.com
+hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, trade-acs.m.taobao.com, api.m.jd.com, account.huami.com, wq.jd.com, buy.itunes.apple.com, mb3admin.com
 
 # 微博去广告 (api.weibo.cn, mapi.weibo.com, *.uve.weibo.com)
 https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js
@@ -22,32 +22,8 @@ https:\/\/wq\.jd\.com\/bases\/jssdk\/GetWxJsApiSign url script-request-header ht
 #若弹出成功则正常使用, 否则继续再此页面继续刷新一下试试
 https:\/\/wq\.jd\.com\/user_new\/info\/GetJDUserInfoUnion  url script-request-header https://jdsharedresourcescdn.azureedge.net/jdresource/JD_extra_cookie.js
 
-
-#宠汪汪邀请助力与赛跑助力脚本(draw.jdfcloud.com)
-#token时效很短，几个小时就失效了,闲麻烦的放弃就行
-#每天拿到token后，可一次性运行完毕即可。
-#互助码friendPin是京东用户名，不是昵称（可在京东APP->我的->设置 查看获得）
-#token获取途径：
-#1、微信搜索'来客有礼'小程序,登陆京东账号，点击底部的'我的'或者'发现'两处地方,即可获取Token，脚本运行提示token失效后，继续按此方法获取即可
-#2、或者每天去'来客有礼'小程序->宠汪汪里面，领狗粮->签到领京豆 也可获取Token(此方法每天只能获取一次)
-# 宠汪汪助力更新Token
-^https:\/\/draw\.jdfcloud\.com(\/mirror)?\/\/api\/user\/addUser\?code= url script-response-body https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_run.js
-# 宠汪汪助力获取Token
-^https:\/\/draw\.jdfcloud\.com(\/mirror)?\/\/api\/user\/user\/detail\?openId= url script-request-header https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_run.js
-
-#宠汪汪强制为别人助力(draw.jdfcloud.com)
-#(助力一个好友你自己可以获得30积分，一天上限是帮助3个好友，自己获得90积分，不管助力是否成功，对方都会成为你的好友)
-#脚本随机从里面获取一个，助力成功后，退出小程序重新点击进去开始助力新的好友
-#https://jdjoy.jd.com/pet/getFriends?itemsPerPage=20&currentPage=1 (currentPage=1表示第一页好友，=2表示第二页好友)
-#如果想设置固定好友，那下载下来放到本地使用，可以修改friendPin换好友(助力一好友后，更换一次friendPin里面的内容)
-#使用方法：
-#①设置好相应软件的重写
-#②从京东APP宠汪汪->领狗粮->邀请好友助力，分享给你小号微信或者微信的文件传输助手。 自己再打开刚才的分享，助力成功后，返回到此小程序首页重新进去宠汪汪即可助力下一位好友
-#③如提示好友人气旺，说明此好友已满了三人助力，需重新进出小程序，重新进入来客有礼-宠汪汪
-^https:\/\/draw\.jdfcloud\.com(\/mirror)?\/\/pet\/enterRoom\/h5\?reqSource=weapp&invitePin=.*+(&inviteSource=task_invite&shareSource=\w+&inviteTimeStamp=\d+&openId=\w+)?|^https:\/\/draw\.jdfcloud\.com(\/mirror)?\/\/pet\/helpFriend\?friendPin url script-request-header https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_help.js
-
 #小米运动获取token(account.huami.com)
-^https:\/\/account\.huami\.com\/v2\/client\/login url script-response-body https://jdsharedresourcescdn.azureedge.net/jdresource/xmSports.js
+^https:\/\/account\.huami\.com\/v2\/client\/login url script-response-body https://raw.githubusercontent.com/JDHelloWorld/jd_scripts/main/backUp/xmSport.js
 
 #picsew专业版(buy.itunes.apple.com)
 https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/mandxy/ziyong/main/picsew.js
