Update and rename js.conf to js_rewrite.conf

--- a/js_rewrite.conf
+++ b/js_rewrite.conf
@@ -17,4 +17,7 @@ https:\/\/wq\.jd\.com\/bases\/jssdk\/GetWxJsApiSign url script-request-header ht
 ^https:\/\/account\.huami\.com\/v2\/client\/login url script-response-body https://raw.githubusercontent.com/taoing/quantumultX/master/scripts/xmSports_new.js
 
 #picsew专业版(buy.itunes.apple.com)
-https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/mandxy/ziyong/main/picsew.js
+#https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/mandxy/ziyong/main/picsew.js
+
+#万源阅读—解锁订阅
+^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/wyyd.js
